--- a/beamer.tex
+++ b/beamer.tex
@@ -28,6 +28,7 @@ Valentin Tolmer}
   \frametitle{Yet Another Compiler Compiler}
 \end{frame}
 
+\input{start.tex}
 \input{parser.tex}
 
 \end{document}
