fix authors' e-mail

--- a/beamer.tex
+++ b/beamer.tex
@@ -13,7 +13,7 @@ Valentin Tolmer}
 \institute{
   Ecole Pour l'Informatique et les Techniques Avancées\\
   \texttt{ranquet@lrde.epita.fr}\\
-  \texttt{fix@me}
+  \texttt{valentin.tolmer@gmail.com}
   }
 
 \date{December 17, 2013}
