beamer: illustrate with compiler stages
    * beamer.tex (Parsers): Here.

--- a/beamer.tex
+++ b/beamer.tex
@@ -170,6 +170,13 @@ Valentin Tolmer}
 \end{frame}
 
 \begin{frame}
+  \frametitle{Compiler design}
+  \begin{center}
+    \includegraphics[scale=0.5]{compiler}
+  \end{center}
+\end{frame}
+
+\begin{frame}
   \frametitle{Types of parsers}
 There are (essentially) two ways to parse:
 \begin{itemize}
