missing graphics files commented

--- a/beamer.tex
+++ b/beamer.tex
@@ -172,7 +172,8 @@ Valentin Tolmer}
 \begin{frame}
   \frametitle{Compiler design}
   \begin{center}
-    \includegraphics[scale=0.5]{compiler}
+    %FIXME
+    %\includegraphics[scale=0.5]{compiler}
   \end{center}
 \end{frame}
 
@@ -257,7 +258,8 @@ Grammar is as follows:
 \end{verbatim}
   \vfill
   \begin{center}
-    \includegraphics[scale=0.4]{example-reduce}
+    %FIXME
+    %\includegraphics[scale=0.4]{example-reduce}
   \end{center}
 \end{frame}
 
