beamer: uncomment no-longer-missing graphics
    * beamer.tex (compiler, example-reduce): These.

--- a/beamer.tex
+++ b/beamer.tex
@@ -172,8 +172,7 @@ Valentin Tolmer}
 \begin{frame}
   \frametitle{Compiler design}
   \begin{center}
-    %FIXME
-    %\includegraphics[scale=0.5]{compiler}
+    \includegraphics[scale=0.5]{compiler}
   \end{center}
 \end{frame}
 
@@ -260,8 +259,7 @@ Grammar is as follows:
 Another, unrelated example:
   \vfill
   \begin{center}
-    %FIXME
-    %\includegraphics[scale=0.4]{example-reduce}
+    \includegraphics[scale=0.4]{example-reduce}
   \end{center}
 \end{frame}
 
