beamer: create the last subsections to fill
    * beamer.tex (Getting started): added the subsections to index the
      existing content.
      (Internals): get started.

--- a/beamer.tex
+++ b/beamer.tex
@@ -298,10 +298,7 @@ Another, unrelated example:
   both \texttt{Lex} and \texttt{Yacc}.
 \end{frame}
 
-\subsection{Shift/Reduce automaton}
-
 \subsection{Formal grammars}
-
 
 \begin{frame}
   \frametitle{Dangling else problem}
@@ -355,6 +352,8 @@ Another, unrelated example:
 
 \section{Getting started}
 
+\subsection{Prologue (rm?)}
+
 \begin{frame}
   \frametitle{Getting started}
     \begin{itemize}
@@ -386,6 +385,8 @@ Another, unrelated example:
   \end{itemize}
 \end{frame}
 
+\subsection{Grammar}
+
 \begin{frame}
   \frametitle{Grammar}
     \begin{itemize}
@@ -413,6 +414,7 @@ Another, unrelated example:
     \end{itemize}
 \end{frame}
 
+\subsection{Epilogue (rm?)}
 
 \begin{frame}
   \frametitle{Epilogue}
@@ -424,7 +426,10 @@ Another, unrelated example:
 
 \section{GNU Bison internals}
 
-\subsection{GNU M4}
+\subsection{Precedence (FIXME)}
+\subsection{Wcategories}
+\subsection{Homemade variants}
+\subsection{GNU M4 backend}
 
 \begin{frame}
 \end{frame}
