beamer: section start slide
    * beamer.tex: Here, insert four stylish (hopefully) slides.

--- a/beamer.tex
+++ b/beamer.tex
@@ -9,7 +9,7 @@
 \usepackage{multicol}
 \usepackage{fixltx2e}
 
-
+\definecolor{black}{RGB}{0,0,0}
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{myorange}{rgb}{1.0,0.6,0.0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
@@ -68,6 +68,16 @@ Valentin Tolmer}
 \begin{frame}[plain]
   \titlepage
 \end{frame}
+
+\begingroup
+\setbeamercolor{background canvas}{bg=craneorange!90}
+\begin{frame}
+    \begin{center}
+        \vspace{1cm}
+        {\Huge\color{black} \textbf{1.} {\fontencoding{T1}\fontfamily{anttlc}\fontseries{m}\fontshape{n} Parsers}}
+    \end{center}
+\end{frame}
+\endgroup
 
 \section{Parsers}
 
@@ -488,6 +498,16 @@ Another, unrelated example:
 
 \section{Getting started}
 
+\begingroup
+\setbeamercolor{background canvas}{bg=craneorange!90}
+\begin{frame}
+    \begin{center}
+        \vspace{1cm}
+        {\Huge\color{black} \textbf{2.} {\fontencoding{T1}\fontfamily{anttlc}\fontseries{m}\fontshape{n} Getting started}}
+    \end{center}
+\end{frame}
+\endgroup
+
 \subsection{Prologue (rm?)}
 
 \begin{frame}
@@ -678,6 +698,16 @@ sum: { printf ("%d\n", $0.val + $-1.val + $-2.val); } ;
 
 \section{GNU Bison internals}
 
+\begingroup
+\setbeamercolor{background canvas}{bg=craneorange!90}
+\begin{frame}
+    \begin{center}
+        \vspace{1cm}
+        {\Huge\color{black} \textbf{3.} {\fontencoding{T1}\fontfamily{anttlc}\fontseries{m}\fontshape{n} GNU Bison Internals}}
+    \end{center}
+\end{frame}
+\endgroup
+
 \subsection{Precedence (FIXME)}
 \subsection{Wcategories}
 \subsection{Homemade variants}
@@ -687,6 +717,16 @@ sum: { printf ("%d\n", $0.val + $-1.val + $-2.val); } ;
 \end{frame}
 
 \section{Working with GNU}
+
+\begingroup
+\setbeamercolor{background canvas}{bg=craneorange!90}
+\begin{frame}
+    \begin{center}
+        \vspace{1cm}
+        {\Huge\color{black} \textbf{4.} {\fontencoding{T1}\fontfamily{anttlc}\fontseries{m}\fontshape{n} Working with GNU}}
+    \end{center}
+\end{frame}
+\endgroup
 
 \subsection{The GNU's habitat}
 
